# my_trading_bot

./: Dockerfile  __main__.py  _logging.py  config.py  main.py  pyproject.toml
.github/workflows/: github-actions.yaml
modules/: analyze_modules.py  scheduler.py  smtp_module.py  upbit_modules.py
